--- a/gama_ws_python/static/index.html
+++ b/gama_ws_python/static/index.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Setup · GAMA Coins</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/> -->
+  <link href="/static/vendor/bootstrap.min.css" rel="stylesheet"/>
   <style>
     body { background:#f5f7fa; }
     .card { border-radius:1rem; box-shadow:0 2px 8px rgba(0,0,0,.08); }
@@ -90,8 +91,10 @@
 
 <!-- Toasts -->
 <div class="toast-container position-fixed bottom-0 end-0 p-3" id="toasts"></div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js"></script>
+<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js"></script> -->
+<script src="/static/vendor/bootstrap.bundle.min.js"></script>
+<script src="/static/vendor/qrcode.min.js"></script>
 
 <script>
 const teams = ["Blue","Red","Green","Yellow","Black","White"];
