--- a/gama_ws_python/static/team.html
+++ b/gama_ws_python/static/team.html
@@ -62,7 +62,12 @@
     }
     .btn .icon { font-size: 1.15em; line-height: 1; margin-right: .35rem; }
     .coins-line { display:flex; align-items:center; gap:.5rem; }
+
+    /* Chart box */
+    #scoreChart { width: 100%; height: 260px; }
   </style>
+  <!-- ECharts (CDN) -->
+  <script src="https://cdn.jsdelivr.net/npm/echarts@5/dist/echarts.min.js"></script>
 </head>
 <body>
 <div class="container py-4">
@@ -95,6 +100,10 @@
       <button class="btn btn-warning" id="btn_alien"><span class="icon">👽</span>Reset Alien (cost 2)</button>
       <button class="btn btn-success" id="btn_grass"><span class="icon">🌿</span>Reset Grass (cost 1)</button>
     </div>
+
+    <!-- ========== Scores Chart (NEW) ========== -->
+    <div id="scoreChart" class="mt-3"></div>
+
   </div>
 </div>
 
@@ -154,6 +163,7 @@ frame.style.borderColor = TEAM_COLOR[TEAM] || "#6c757d";
 /* -------- Server coins (no localStorage) -------- */
 let coinsLoaded = false;
 let currentCoins = 0;
+let coinsSyncTimer = null;   // NEW: auto-sync timer
 
 function setCoins(val){
   currentCoins = Math.max(0, val|0);
@@ -177,6 +187,7 @@ async function fetchCoins(){
   }
 }
 
+/* CHANGED: ไม่โยน error เมื่อ ok=false แต่คืนสถานะให้ผู้เรียก + อัปเดตยอดตามเซิร์ฟเวอร์ */
 async function decrementCoins(cost, action){
   const res = await fetch("/api/coins/decrement", {
     method: "POST",
@@ -185,9 +196,29 @@ async function decrementCoins(cost, action){
   });
   if (!res.ok) throw new Error(`HTTP ${res.status}`);
   const data = await res.json();
-  if (!data.ok) throw new Error("Server rejected decrement");
-  setCoins(data.coins ?? 0);
-  return data.coins ?? 0;
+  if (data && typeof data.coins !== "undefined") {
+    setCoins(data.coins);
+  }
+  return data; // {ok:true/false, coins, error?}
+}
+
+/* NEW: refund endpoint */
+async function refundCoins(amount){
+  try {
+    const res = await fetch("/api/coins/refund", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ team: TEAM, amount })
+    });
+    if (!res.ok) throw new Error(`HTTP ${res.status}`);
+    const data = await res.json();
+    if (data && typeof data.coins !== "undefined") setCoins(data.coins);
+    return data;
+  } catch(e){
+    // ไม่ต้องโชว์ error หนัก ๆ เพื่อความลื่นไหล
+    showToast("Refund failed, please sync.", "warning");
+    return null;
+  }
 }
 
 /* -------- Toasts -------- */
@@ -204,6 +235,92 @@ function showToast(msg, variant="primary") {
 /* -------- Haptics (mobile vibration) -------- */
 function buzzSuccess(){ if (navigator.vibrate) navigator.vibrate(60); }
 function buzzWarn(){ if (navigator.vibrate) navigator.vibrate([30, 40, 30]); }
+
+/* -------- ECharts: init + updater (NEW) -------- */
+const BAR_LABELS = ['Qu','Sa','Ma','Pho','De','Di','Os','Phy','Ca','Gm']; // ✅ ชื่อแท่งตั้งแต่แรก
+let chart = null;
+
+function ensureChart(){
+  if (chart) return;
+  chart = echarts.init(document.getElementById('scoreChart'));
+  window.addEventListener('resize', () => chart && chart.resize());
+
+  const zeros = new Array(BAR_LABELS.length).fill(0);
+
+  chart.setOption({
+    animation: true,
+    animationDuration: 300,
+    animationEasing: 'cubicOut',
+    animationDurationUpdate: 500,
+    animationEasingUpdate: 'cubicOut',
+
+    grid: { left: 40, right: 12, top: 20, bottom: 35 },
+    tooltip: {
+      trigger: 'item',
+      formatter: params => `${params.name}: ${params.value}`
+    },
+    xAxis: {
+      type: 'category',
+      data: BAR_LABELS,
+      axisTick: { alignWithLabel: true },
+      axisLabel: { rotate: 90 }
+    },
+    yAxis: {
+      type: 'value',
+      min: 0,
+      max: 10,
+      interval: 1
+    },
+    series: [{
+      type: 'bar',
+      data: zeros,
+      itemStyle: { color: (TEAM_COLOR[TEAM] || '#6c757d') },
+      universalTransition: true,
+      animation: true,
+      animationDurationUpdate: 500,
+      animationEasingUpdate: 'cubicOut'
+    }]
+  });
+}
+
+function updateChart(scores){
+  ensureChart();
+  const data = BAR_LABELS.map((_, i) => {
+    const v = Number(scores[i]);
+    const n = Number.isFinite(v) ? Math.round(v) : 0;
+    return Math.max(0, Math.min(10, n));
+  });
+
+  chart.setOption({
+    series: [{
+      animation: true,
+      animationDurationUpdate: 500,
+      animationEasingUpdate: 'cubicOut',
+      data
+    }]
+  });
+}
+
+/* -------- parse {team=Blue, score=[...]} (NEW) -------- */
+function parseGamaKVMessage(s){
+  if (typeof s !== "string") return null;
+  const t = s.trim();
+  if (!t.startsWith("{") || !t.endsWith("}") || !t.includes("=")) return null;
+
+  const mTeam = /team\s*=\s*([A-Za-z]+)/i.exec(t);
+  const team = mTeam ? mTeam[1] : null;
+
+  const mScores = /scores?\s*=\s*\[([^\]]*)\]/i.exec(t);
+  let scores = [];
+  if (mScores && mScores[1]) {
+    scores = mScores[1]
+      .split(",")
+      .map(x => parseFloat(x.trim()))
+      .filter(n => !Number.isNaN(n));
+  }
+  if (!team || !scores.length) return null;
+  return { type: "score_update", team, scores };
+}
 
 /* -------- WS state -------- */
 let sock = null;
@@ -264,8 +381,21 @@ function connectWS(){
     refreshUI();
   };
   sock.onmessage = (e) => {
+    // 1) พยายาม parse JSON ก่อน
+    let obj = null;
+    try { obj = JSON.parse(e.data); } catch {}
+
+    // 2) ถ้าไม่ใช่ JSON ลอง parse รูปแบบ {team=Blue, score=[...]}
+    if (!obj) obj = parseGamaKVMessage(e.data);
+
+    // 3) ถ้าเป็น score_update และทีมตรงกัน → วาดกราฟ
+    if (obj && obj.type === "score_update" && obj.team === TEAM && Array.isArray(obj.scores)) {
+      updateChart(obj.scores);
+      return;
+    }
+
+    // 4) เดิม: จัดการสถานะ bridge/GAMA
     try {
-      const obj = JSON.parse(e.data);
       if (obj?.error === "gama_unreachable") {
         gamaReady = false;
         showToast("GAMA not reachable. Retrying...", "warning");
@@ -307,31 +437,43 @@ function sendReset(threat){
   catch { showToast("Failed to send", "danger"); return false; }
 }
 
+/* CHANGED: ลำดับใหม่ — decrement ก่อน แล้วค่อยส่งไป GAMA; ถ้าส่งล้มเหลวให้ refund */
 cfConfirmBtn.onclick = async () => {
   if (!pending) return;
   const { threat, cost } = pending;
 
-  if (!gamaReady || !isSockOpen()){
-    showToast("Not connected to GAMA", "warning");
-    buzzWarn();
+  // ตัดเฉพาะจากเซิร์ฟเวอร์ก่อน (กันแข่งหลายอุปกรณ์)
+  let dec;
+  try {
+    dec = await decrementCoins(cost, threat);
+  } catch(e){
+    showToast("Failed to update coins on server.", "danger");
     return;
   }
-  if (currentCoins < cost){
-    showToast(`Not enough coins (${currentCoins}/${cost})`, "warning");
+
+  if (!dec?.ok){
+    // เหรียญไม่พอ/หรือถูกใช้ไปแล้วที่เครื่องอื่น -> อัปเดตยอดล่าสุดและแจ้งเตือน
+    const serverCoins = typeof dec?.coins === "number" ? dec.coins : currentCoins;
+    showToast(`Not enough coins. You have ${serverCoins}.`, "warning");
     buzzWarn();
     return;
   }
 
-  if (!sendReset(threat)) return;
-  try {
-    const left = await decrementCoins(cost, threat);
-    showToast(`Coins deducted (-${cost}). Remaining: ${left}`, "success");
-    buzzSuccess();
-    confirmModal.hide();
-    pending = null;
-  } catch (e) {
-    showToast("Failed to update coins on server.", "danger");
+  // ตัดสำเร็จ -> ส่งคำสั่งไป GAMA
+  const sent = sendReset(threat);
+  if (!sent){
+    // ส่งไม่สำเร็จ -> คืนเหรียญ
+    await refundCoins(cost);
+    showToast("Action failed. Refunded coins.", "warning");
+    buzzWarn();
+    return;
   }
+
+  // สำเร็จครบ
+  showToast(`Coins deducted (-${cost}). Remaining: ${currentCoins}`, "success");
+  buzzSuccess();
+  confirmModal.hide();
+  pending = null;
 };
 
 /* Hook buttons */
@@ -344,6 +486,11 @@ btnGrass.onclick = () => openConfirm("Grasses", COST.Grass);
   await fetchCoins();
   connectWS();
   updateActionButtons();
+  ensureChart(); // prepare chart with labels & zeros
+
+  // NEW: auto-sync coins ทุก 2 วินาที (กัน UI ค้างต่างอุปกรณ์)
+  if (coinsSyncTimer) clearInterval(coinsSyncTimer);
+  coinsSyncTimer = setInterval(fetchCoins, 1000);
 })();
 reconnBtn.onclick = () => { if (!isSockOpen()) connectWS(); };
 </script>
