--- a/gama_ws_python/static/team.html
+++ b/gama_ws_python/static/team.html
@@ -66,8 +66,8 @@
     /* Chart box */
     #scoreChart { width: 100%; height: 260px; }
   </style>
-  <!-- ECharts (CDN) -->
-  <script src="https://cdn.jsdelivr.net/npm/echarts@5/dist/echarts.min.js"></script>
+  <!-- ECharts -->
+  <script src="/static/vendor/echarts.min.js"></script>
 </head>
 <body>
 <div class="container py-4">
