--- a/gama_ws_python/static/index.html
+++ b/gama_ws_python/static/index.html
@@ -4,7 +4,6 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Setup · GAMA Coins</title>
-  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/> -->
   <link href="/static/vendor/bootstrap.min.css" rel="stylesheet"/>
   <style>
     body { background:#f5f7fa; }
@@ -55,10 +54,9 @@
     <!-- Top controls -->
     <div class="d-flex flex-wrap gap-2 align-items-center mb-3">
       <h5 class="mb-0 me-auto">Coins per team</h5>
-      <!-- (Removed auto-refresh controls) -->
     </div>
 
-    <div id="rows" class="vstack gap-2 mb-3"></div>
+    <div id="rows" class="vstack gap-2 mb-3" role="group" aria-label="Coins per team"></div>
 
     <div class="d-flex flex-wrap gap-2 justify-content-between align-items-center mt-2">
       <small id="statusText" class="text-muted">
@@ -83,12 +81,11 @@
 
 <!-- Toasts -->
 <div class="toast-container position-fixed bottom-0 end-0 p-3" id="toasts"></div>
-<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js"></script> -->
 <script src="/static/vendor/bootstrap.bundle.min.js"></script>
 <script src="/static/vendor/qrcode.min.js"></script>
 
 <script>
+/* ---------- Constants & elements ---------- */
 const teams = ["Blue","Red","Green","Yellow","Black","White"];
 const rows      = document.getElementById('rows');
 const linksBox  = document.getElementById('links');
@@ -104,6 +101,23 @@ function showToast(msg, variant="primary") {
   toasts.appendChild(el);
   new bootstrap.Toast(el, { delay: 1800 }).show();
   el.addEventListener("hidden.bs.toast", () => el.remove());
+}
+
+/* ---------- Utils ---------- */
+const saving = { busy:false };
+function setBusy(on){
+  saving.busy = !!on;
+  submitBtn.disabled = on || submitBtn.disabled;
+  resetAllBtn.disabled = on;
+  // disable all inputs when busy
+  refs.forEach(({num, incBtn, decBtn}) => { num.disabled = on; incBtn.disabled = on; decBtn.disabled = on; });
+}
+
+function buildTeamUrl(team){
+  // robust to proxy/prefix (always absolute to current origin)
+  const u = new URL('/static/team.html', window.location.origin);
+  u.searchParams.set('team', team);
+  return u.toString();
 }
 
 /* ---------- Copy helper ---------- */
@@ -123,7 +137,7 @@ async function copyText(txt) {
 /* ---------- Server API ---------- */
 async function fetchAllCoins() {
   try {
-    const res = await fetch("/api/coins");
+    const res = await fetch("/api/coins", { cache:"no-store" });
     if (!res.ok) throw new Error("HTTP " + res.status);
     return await res.json();
   } catch {
@@ -148,14 +162,17 @@ async function saveAllCoins(payload) {
 
 /* ---------- Build coin rows ---------- */
 const refs = [];
+function clampNonNegInt(v){ v = parseInt(v ?? "0", 10); return Number.isFinite(v) && v > 0 ? v : (v===0 ? 0 : 0); }
+
 function makeRow(team, initial=0){
   const row = document.createElement('div');
   row.className = "coin-row";
+  const inputId = `coins-${team}`;
   row.innerHTML = `
-    <div class="team-label">${team}:</div>
+    <label class="team-label" for="${inputId}">${team}:</label>
     <button class="btn btn-outline-secondary spin" data-op="dec" aria-label="Decrease ${team} coins">−</button>
-    <input class="form-control num" type="number" min="0" step="1" value="${initial}"
-           aria-label="${team} coins" placeholder="0" inputmode="numeric" pattern="[0-9]*"/>
+    <input id="${inputId}" class="form-control num" type="number" min="0" step="1" value="${clampNonNegInt(initial)}"
+           aria-label="${team} coins" placeholder="0" inputmode="numeric" pattern="[0-9]*" autocomplete="off"/>
     <button class="btn btn-primary spin" data-op="inc" aria-label="Increase ${team} coins">+</button>
   `;
   const dec = row.querySelector('[data-op="dec"]');
@@ -163,13 +180,15 @@ function makeRow(team, initial=0){
   const num = row.querySelector('input');
 
   const sanitize = () => {
-    const v = Math.max(0, parseInt(num.value || "0", 10));
+    const v = clampNonNegInt(num.value);
     num.value = String(v);
     validateAnyPositive();
   };
   num.addEventListener('input', sanitize);
-  dec.onclick = () => { num.value = String(Math.max(0, parseInt(num.value||"0",10) - 1)); validateAnyPositive(); };
-  inc.onclick = () => { num.value = String(Math.max(0, parseInt(num.value||"0",10) + 1)); validateAnyPositive(); };
+  num.addEventListener('blur', sanitize);
+  num.addEventListener('keydown', (e)=>{ if(e.key==="Enter"){ e.preventDefault(); if(!submitBtn.disabled) submitBtn.click(); }});
+  dec.onclick = () => { if (saving.busy) return; num.value = String(Math.max(0, clampNonNegInt(num.value)-1)); validateAnyPositive(); };
+  inc.onclick = () => { if (saving.busy) return; num.value = String(Math.max(0, clampNonNegInt(num.value)+1)); validateAnyPositive(); };
 
   rows.appendChild(row);
   refs.push({ team, num, incBtn: inc, decBtn: dec });
@@ -190,7 +209,7 @@ function badgeClass(t){
 function renderTeamLinks(enabled=false) {
   linksBox.innerHTML = "";
   teams.forEach(t => {
-    const url = `${location.origin}/static/team.html?team=${encodeURIComponent(t)}`;
+    const url = buildTeamUrl(t);
     const row = document.createElement('div');
     row.className = "vstack gap-2";
 
@@ -233,10 +252,10 @@ function renderTeamLinks(enabled=false) {
     const holder  = qrWrap.querySelector(".qr-holder");
 
     copyBtn.onclick = () => copyText(url);
-    openBtn.onclick = () => window.open(url, "_blank");
+    openBtn.onclick = () => window.open(url, "_blank", "noopener");
     qrBtn.onclick = () => {
       if (typeof window.QRCode === "undefined") {
-        showToast("QR library is not available (possibly blocked by network).", "danger");
+        showToast("QR library is not available.", "danger");
         document.querySelectorAll('[data-qr]').forEach(b => b.disabled = true);
         return;
       }
@@ -263,8 +282,9 @@ function renderTeamLinks(enabled=false) {
 }
 
 /* ---------- Validation & Submit ---------- */
-function anyPositive(){ return refs.some(({num}) => parseInt(num.value||"0",10) > 0); }
+function anyPositive(){ return refs.some(({num}) => clampNonNegInt(num.value) > 0); }
 function validateAnyPositive(){
+  if (saving.busy) return; // อย่ากระพริบสถานะตอนกำลัง save
   const ok = anyPositive();
   submitBtn.disabled = !ok;
   statusTxt.textContent = ok ? "Ready to submit." : "Enter coins (at least one team > 0), then click Submit to unlock team links.";
@@ -273,10 +293,13 @@ function validateAnyPositive(){
 }
 
 submitBtn.onclick = async () => {
+  if (saving.busy) return;
   if (!anyPositive()) { showToast("Please enter coins for at least one team (> 0).", "warning"); return; }
   const payload = {};
-  refs.forEach(({team, num}) => payload[team] = Math.max(0, parseInt(num.value||"0",10)));
+  refs.forEach(({team, num}) => payload[team] = clampNonNegInt(num.value));
+  setBusy(true);
   const res = await saveAllCoins(payload);
+  setBusy(false);
   if (!res) return;
   renderTeamLinks(true);
   showToast("Saved successfully.", "success");
@@ -287,9 +310,12 @@ submitBtn.onclick = async () => {
 
 /* ---------- Reset all to zero ---------- */
 resetAllBtn.onclick = async () => {
+  if (saving.busy) return;
   if (!confirm("Reset ALL teams to zero?")) return;
   const zeros = Object.fromEntries(teams.map(t => [t, 0]));
+  setBusy(true);
   const res = await saveAllCoins(zeros);
+  setBusy(false);
   if (!res) return;
   refs.forEach(r => r.num.value = "0");
   validateAnyPositive();
@@ -310,10 +336,10 @@ resetAllBtn.onclick = async () => {
   const coinsMap = (await fetchAllCoins()) || Object.fromEntries(teams.map(t => [t, 0]));
   rows.innerHTML = "";
 
-  teams.forEach(t => makeRow(t, Math.max(0, parseInt(coinsMap[t]||0, 10))));
+  teams.forEach(t => makeRow(t, clampNonNegInt(coinsMap[t])));
   validateAnyPositive();
 
-  const hasAny = Object.values(coinsMap).some(v => parseInt(v||0,10) > 0);
+  const hasAny = Object.values(coinsMap).some(v => clampNonNegInt(v) > 0);
   renderTeamLinks(hasAny);
   if (hasAny) {
     statusTxt.textContent = "Server already has coins. You can Open/Copy/QR each team.";
