--- a/gama_ws_python/static/team.html
+++ b/gama_ws_python/static/team.html
@@ -211,6 +211,7 @@ async function fetchScores(){
 }
 
 /* -------- parse KV (fallback) -------- */
+// {type=score_update, team=Blue, scores=[10,10,10,10,10,10,10,10,10,10]}
 function parseGamaKVMessage(s){
   if (typeof s !== "string") return null;
   const t=s.trim(); if (!t.includes("=")) return null;
