--- a/gama_ws_python/static/index.html
+++ b/gama_ws_python/static/index.html
@@ -186,7 +186,8 @@
 
   <script src="/static/vendor/bootstrap.bundle.min.js"></script>
   <script src="/static/vendor/qrcode.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/echarts/dist/echarts.min.js"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/echarts/dist/echarts.min.js"></script> -->
+  <script src="/static/vendor/echarts.min.js"></script>
 
 </head>
 
