--- a/gama_ws_python/static/team.html
+++ b/gama_ws_python/static/team.html
@@ -194,11 +194,14 @@
   </style>
 
   <!-- libs -->
-  <script src="/static/vendor/echarts.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <!-- <script src="/static/vendor/echarts.min.js"></script> -->
+  <script src="/static/vendor/chart.js"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> -->
   <script src="/static/vendor/bootstrap.bundle.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
-  <script src="https://cdn.jsdelivr.net/npm/echarts/dist/echarts.min.js"></script>
+  <script src="/static/vendor/chartjs-plugin-datalabels"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script> -->
+  <script src="/static/vendor/echarts.min.js"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/echarts/dist/echarts.min.js"></script> -->
 
 </head>
 
@@ -237,7 +240,6 @@
 
             <div class="d-flex justify-content-between mt-3 small">
               <div class="text-start">
-                <!-- เปลี่ยนข้อความเป็น Max Scores (1800) -->
                 <div>Max Scores</div>
                 <div id="totalScores" class="fw-bold">1800</div>
               </div>
@@ -301,7 +303,7 @@
         <div class="card shadow-sm p-4 h-100">
           <h5 class="mb-3">Tree Growth Stage Overview</h5>
           <div class="barchart-container">
-            <div id="chart" class="mt-3"></div>
+            <div id="chart"></div>
           </div>
         </div>
       </div>
@@ -480,7 +482,7 @@
       speciesChart.setOption({
         animation: true, animationDuration: 300, animationEasing: 'cubicOut',
         animationDurationUpdate: 500, animationEasingUpdate: 'cubicOut',
-        grid: { left: 30, right: 20, top: 20, bottom: 30 },
+        grid: { left: 40, right: 30, top: 20, bottom: 30 },
         tooltip: { trigger: 'item', formatter: p => `${p.name}: ${p.value}` },
         yAxis: {
           type: 'category',
@@ -498,6 +500,11 @@
           itemStyle: {
             color: TEAM_COLOR[TEAM] || '#6c757d',
             borderRadius: [10, 10, 10, 10]
+          },
+          label: {
+            show: true,
+            position: 'right',
+            formatter: params => params.value ?? 0
           },
           universalTransition: true
         }]
@@ -530,7 +537,9 @@
 
     /* -------- Tree Growth Stage (ECharts) -------- */
     let growthChart = null;
+    // index 0 = Dead, 1–3 = Stage 1–3
     const STAGE_COLORS = [
+      'rgb(148, 163, 184)', // Dead - Gray
       'rgb(151, 255, 110)', // Stage 1
       'rgb(50, 176, 0)',    // Stage 2
       'rgb(32, 112, 0)'     // Stage 3
@@ -545,8 +554,11 @@
         tooltip: { trigger: 'axis' },
         xAxis: {
           type: 'category',
-          data: ['Stage 1', 'Stage 2', 'Stage 3'],
-          axisTick: { show: false }
+          data: ['Dead', 'Stage 1', 'Stage 2', 'Stage 3'],
+          axisLabel: {
+            interval: 0,
+            rotate: 90
+          }
         },
         yAxis: {
           type: 'value',
@@ -555,7 +567,7 @@
         series: [{
           name: 'Trees',
           type: 'bar',
-          data: [0, 0, 0],
+          data: [0, 0, 0, 0],
           barWidth: 30,
           itemStyle: {
             color: function (params) {
@@ -568,8 +580,8 @@
 
     function updateGrowthChart(values) {
       initGrowthChart();
-      const data = [0, 0, 0];
-      for (let i = 0; i < 3; i++) {
+      const data = [0, 0, 0, 0];
+      for (let i = 0; i < 4; i++) {
         const v = Number(values?.[i]);
         data[i] = Number.isFinite(v) && v >= 0 ? v : 0;
       }
@@ -592,7 +604,7 @@
       stackChart = new Chart(ctx, {
         type: 'bar',
         data: {
-          labels: ['1', '2', '3', '4', '5', '6'],
+          labels: ['Plot 1', 'Plot 2', 'Plot 3', 'Plot 4', 'Plot 5', 'Plot 6'],
           datasets: [
             { label: 'Stage 1', data: [0, 0, 0, 0, 0, 0], backgroundColor: '#455B73' },
             { label: 'Stage 2', data: [0, 0, 0, 0, 0, 0], backgroundColor: '#38C6D1' },
@@ -645,7 +657,7 @@
         }
       }
 
-      stackChart.data.labels = ['1', '2', '3', '4', '5', '6'];
+      stackChart.data.labels = ['Plot 1', 'Plot 2', 'Plot 3', 'Plot 4', 'Plot 5', 'Plot 6'];
       stackChart.data.datasets[0].data = dataByStage[0];
       stackChart.data.datasets[1].data = dataByStage[1];
       stackChart.data.datasets[2].data = dataByStage[2];
@@ -815,7 +827,7 @@
           return;
         }
 
-        // 3) tree growth stage (3 ค่า)
+        // 3) tree growth stage (4 ค่า)
         if (obj && obj.type === "tree_growth_stage_update") {
           if (obj.team === TEAM) {
             const arr = Array.isArray(obj.score) ? obj.score : (Array.isArray(obj.growth) ? obj.growth : null);
