--- a/gama_ws_python/static/team.html
+++ b/gama_ws_python/static/team.html
@@ -26,7 +26,6 @@
     @media (min-width:768px) {
       .header-grid {
         grid-template-columns: max-content auto;
-        /* พอดีกับเนื้อหา */
         align-items: center;
         column-gap: 1rem;
       }
@@ -123,7 +122,7 @@
     @media (max-width: 768px) {
 
       .header-grid {
-        display: flex;
+        /* display: flex; */
         justify-content: space-between;
         align-items: center;
         gap: 12px;
@@ -152,9 +151,41 @@
       .d-grid.gap-2.d-md-flex-col button {
         width: 100%;
       }
+
+      .team-round {
+        font-size: 0.9rem;
+        margin-top: -6px;
+        font-weight: 600;
+      }
+
+      .header-grid {
+        display: grid;
+        grid-template-columns: 1fr auto;
+        grid-template-rows: auto auto;
+        gap: 8px 12px;
+      }
+
+      #teamFrame {
+        grid-column: 1 / 2;
+      }
+
+      #statusBox {
+        grid-column: 2 / 3;
+        text-align: right;
+      }
+
+      #teamRound {
+        grid-column: 1 / 2;
+        font-weight: 600;
+      }
+
+      #reconnBox {
+        grid-column: 2 / 3;
+        text-align: right;
+      }
     }
 
-    /* Desktop layout */
+    /* -------- Desktop layout -------- */
     @media (min-width: 768px) {
 
       #gaugeChart,
@@ -166,6 +197,34 @@
       #score {
         margin-top: -20px !important;
         font-size: 20px;
+      }
+
+      .header-grid {
+        display: grid;
+        grid-template-columns: auto auto auto 1fr;
+        align-items: center;
+        gap: 20px;
+        width: 100%;
+        grid-auto-rows: min-content;
+      }
+
+      #teamFrame {
+        grid-column: 1;
+      }
+
+      #statusBox {
+        grid-column: 2;
+      }
+
+      #reconnBox {
+        grid-column: 3;
+      }
+
+      /* Round อยู่ขวาสุด */
+      #teamRound {
+        grid-column: 4;
+        justify-self: end;
+        font-weight: 600;
       }
     }
 
@@ -194,14 +253,10 @@
   </style>
 
   <!-- libs -->
-  <!-- <script src="/static/vendor/echarts.min.js"></script> -->
   <script src="/static/vendor/chart.js"></script>
-  <!-- <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> -->
   <script src="/static/vendor/bootstrap.bundle.min.js"></script>
   <script src="/static/vendor/chartjs-plugin-datalabels"></script>
-  <!-- <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script> -->
   <script src="/static/vendor/echarts.min.js"></script>
-  <!-- <script src="https://cdn.jsdelivr.net/npm/echarts/dist/echarts.min.js"></script> -->
 
 </head>
 
@@ -214,11 +269,23 @@
         <div id="teamFrame">
           <h3 id="teamTitle" class="team-name">Team</h3>
         </div>
-        <div class="status-box">
+
+        <div id="statusBox" class="status-box">
           <span class="fw-semibold">Status:</span>
-          <span id="badge" class="badge text-bg-secondary">Disconnected</span>
-          <button id="reconn" class="btn btn-outline-primary">Re-connect</button>
+          <span id="badge" class="badge text-bg-success">Connected</span>
+          <!-- reconn desktop -->
+          <button id="reconn" class="btn btn-outline-primary d-none d-md-inline-flex">Re-connect</button>
         </div>
+
+        <div id="teamRound" class="team-round">
+          Current round: 0
+        </div>
+
+        <!-- reconn mobile -->
+        <div id="reconnBox" class="reconn-box">
+          <button id="reconn" class="btn btn-outline-primary d-md-none">Re-connect</button>
+        </div>
+
       </div>
 
       <hr />
@@ -244,8 +311,8 @@
                 <div id="totalScores" class="fw-bold">1800</div>
               </div>
 
-              <div class="text-end">
-                <div>Current Scores</div>
+              <div class="text-end fw-bold">
+                <div class="text-primary">Current Scores</div>
                 <div id="currentScores" class="fw-bold">0</div>
               </div>
             </div>
@@ -284,16 +351,28 @@
         <!-- Action Buttons -->
         <div class="col-md-4">
           <div class="card shadow-sm p-4 text-center h-100">
-            <h5 class="mb-2">Reset Threat <> Coins</h5>
-            <div class="d-grid gap-2 d-md-flex-col">
-              <button class="btn btn-success" id="btn_grass"><span class="icon">🌿</span>Reset Grass (cost 1)</button>
-              <button class="btn btn-warning" id="btn_alien"><span class="icon">👽</span>Reset Alien (cost 2)</button>
-              <button class="btn btn-danger" id="btn_fire"><span class="icon">🔥</span>Reset Fire (cost 3)</button>
+            <h5 class="mb-2">Reset Threat &lt;&gt; Coins</h5>
+            <div class="d-grid gap-3">
+              <button class="btn btn-success py-3 fs-6" id="btn_grass"><span class="icon">🌿</span>Reset Grass (cost
+                1)</button>
+              <button class="btn btn-warning py-3 fs-6" id="btn_alien"><span class="icon">👽</span>Reset Alien (cost
+                2)</button>
+              <button class="btn btn-danger py-3 fs-6" id="btn_fire"><span class="icon">🔥</span>Reset Fire (cost
+                3)</button>
             </div>
           </div>
         </div>
 
       </div>
+    </div>
+
+    <!-- EChart -->
+    <div class="card shadow-sm p-4 mt-4">
+      <div class="meta-line d-flex justify-content-between align-items-center">
+        <h5 class="mb-3">Number of remaining trees by species</h5>
+        <small id="lastUpdate">Last update: –</small>
+      </div>
+      <div id="scoreChart" class="mt-3"></div>
     </div>
 
     <div class="row mt-4">
@@ -318,15 +397,6 @@
         </div>
       </div>
 
-    </div>
-
-    <!-- EChart -->
-    <div class="card shadow-sm p-4">
-      <div class="meta-line d-flex justify-content-between align-items-center">
-        <h5 class="mb-3">Number of remaining trees by species</h5>
-        <small id="lastUpdate">Last update: –</small>
-      </div>
-      <div id="scoreChart" class="mt-3"></div>
     </div>
 
   </div>
@@ -372,6 +442,7 @@
     const coinsEl = document.getElementById("coins");
     const totalCoinsEl = document.getElementById("totalCoins");
     const lastUpdateEl = document.getElementById("lastUpdate");
+    const teamRoundEl = document.getElementById("teamRound");
 
     const teamScoreValueEl = document.getElementById("teamScoreValue");
     const totalScoresEl = document.getElementById("totalScores");
@@ -413,6 +484,27 @@
       lastUpdateEl.textContent = `Last update: ${nowStr()} (${source})`;
     }
 
+    function setRoundDisplay(roundVal) {
+      if (!teamRoundEl) return;
+      const r = Number(roundVal);
+      if (Number.isFinite(r) && r >= 0) {
+        teamRoundEl.textContent = `Current round: ${r}`;
+      } else {
+        teamRoundEl.textContent = "Current round: –";
+      }
+    }
+
+    async function fetchRound() {
+      try {
+        const res = await fetch("/api/round");
+        if (!res.ok) throw new Error(`HTTP ${res.status}`);
+        const data = await res.json();
+        setRoundDisplay(data.round);
+      } catch (err) {
+        console.error("Round fetch error:", err);
+      }
+    }
+
     /* -------- Coins (server-authoritative) -------- */
     let coinsLoaded = false;
     let currentCoins = 0;
@@ -421,13 +513,13 @@
     function setCoins(val, initialVal) {
       currentCoins = Math.max(0, val | 0);
       coinsEl.textContent = String(currentCoins);
-
       // ถ้า server ส่ง initial_coins มาให้ (กรณี app.py ใหม่)
       if (typeof initialVal === "number" && !Number.isNaN(initialVal)) {
         initialCoins = Math.max(0, initialVal | 0);
         totalCoinsEl.textContent = String(initialCoins);
-      } else if (initialCoins === null) {
-        // fallback: กรณีไม่มี initial_coins (เช่น backend เก่า)
+      } 
+      // fallback: กรณีไม่มี initial_coins (เช่น backend เก่า)
+      else if (initialCoins === null) {
         initialCoins = currentCoins;
         totalCoinsEl.textContent = String(initialCoins);
       }
@@ -487,6 +579,7 @@
         yAxis: {
           type: 'category',
           data: BAR_LABELS,
+          inverse: true,
           axisTick: { alignWithLabel: true },
           axisLabel: {
             rotate: 0,
@@ -645,9 +738,7 @@
       const stages = 3;
 
       const safe = Array.isArray(matrix) ? matrix : [];
-      const dataByStage = [
-        [], [], []
-      ];
+      const dataByStage = [[], [], []];
 
       for (let i = 0; i < rounds; i++) {
         const row = Array.isArray(safe[i]) ? safe[i] : [];
@@ -672,30 +763,6 @@
       updateStackChart(data.stack || data.score || []);
     }
 
-    /* -------- parse KV (fallback) -------- */
-    function parseGamaKVMessage(s) {
-      if (typeof s !== "string") return null;
-      const t = s.trim(); if (!t.includes("=")) return null;
-
-      const mTeam = /team\s*=\s*"?([A-Za-z]+)"?/i.exec(t);
-      const team = mTeam ? mTeam[1] : null;
-
-      const mScores = /scores?\s*=\s*\[([^\]]*)\]/i.exec(t);
-      let scores = [];
-      if (mScores && mScores[1]) {
-        scores = mScores[1]
-          .split(",")
-          .map(x => parseFloat(x.trim()))
-          .filter(n => !Number.isNaN(n));
-      }
-
-      const mType = /type\s*=\s*"?(scores?_update)"?/i.exec(t);
-      const typ = mType ? mType[1] : "score_update";
-
-      if (!team || !scores.length) return null;
-      return { type: typ, team, scores };
-    }
-
     /* -------- WebSocket (+ auto-reconnect) -------- */
     let sock = null, bridgeReady = false, gamaReady = false;
     const READY = { CONNECTING: 0, OPEN: 1, CLOSING: 2, CLOSED: 3 };
@@ -711,7 +778,6 @@
     }
     function isSockOpen() { return sock && sock.readyState === READY.OPEN; }
 
-    /* Backoff */
     let wsRetry = 0, wsTimer = null;
     const WS_BACKOFF = [800, 1500, 3000, 5000, 8000];
     function resetReconnect() {
@@ -737,7 +803,6 @@
       connectWS();
     }
 
-    /* Buttons enable/disable */
     function updateActionButtons() {
       const canSend = gamaReady && isSockOpen();
       const validTeam = TEAMS.includes(TEAM);
@@ -755,7 +820,6 @@
       setBtnState(btnAlien, "btn-warning", COST.Alien);
       setBtnState(btnGrass, "btn-success", COST.Grass);
 
-      // ให้กดได้เสมอ ยกเว้นกำลัง CONNECTING (กันกดรัว)
       reconnBtn.disabled = !!connecting;
     }
 
@@ -811,24 +875,34 @@
 
       sock.onmessage = (e) => {
         let obj = null;
-        try { obj = JSON.parse(e.data); } catch { }
-        if (!obj) obj = parseGamaKVMessage(e.data);
+        try { obj = JSON.parse(e.data); } catch {
+          return;
+        }
+        if (!obj || typeof obj !== "object") return;
+
+        // 0) round update
+        if (obj.type === "round_update") {
+          if (!obj.team || obj.team === TEAM) {
+            setRoundDisplay(obj.round);
+          }
+          return;
+        }
 
         // 1) อัปเดต coins
-        if (obj && obj.type === "coins_update") {
+        if (obj.type === "coins_update") {
           if (obj.team === TEAM && typeof obj.coins === "number") setCoins(obj.coins);
           return;
         }
 
         // 2) species scores (10 ค่า)
-        if (obj && (obj.type === "scores_update" || obj.type === "score_update")) {
+        if (obj.type === "scores_update" || obj.type === "score_update") {
           const arr = Array.isArray(obj.scores) ? obj.scores : (Array.isArray(obj.score) ? obj.score : null);
           if (obj.team === TEAM && Array.isArray(arr)) updateSpeciesChart(arr, "WS");
           return;
         }
 
         // 3) tree growth stage (4 ค่า)
-        if (obj && obj.type === "tree_growth_stage_update") {
+        if (obj.type === "tree_growth_stage_update") {
           if (obj.team === TEAM) {
             const arr = Array.isArray(obj.score) ? obj.score : (Array.isArray(obj.growth) ? obj.growth : null);
             if (arr) updateGrowthChart(arr);
@@ -837,16 +911,17 @@
         }
 
         // 4) stack trees (6x3)
-        if (obj && obj.type === "stack_tree_update") {
+        if (obj.type === "stack_tree_update") {
           if (obj.team === TEAM) {
             const mat = Array.isArray(obj.score) ? obj.score : (Array.isArray(obj.stack) ? obj.stack : null);
             if (mat) updateStackChart(mat);
           }
           return;
         }
+        
 
         // 5) team score (leaderboard) → ใช้อัปเดต Team Score gauge
-        if (obj && obj.type === "team_score_update") {
+        if (obj.type === "team_score_update") {
           const scoresList = Array.isArray(obj.score) ? obj.score : [];
           const teamsArr = Array.isArray(obj.teams) ? obj.teams : TEAMS;
           const idx = teamsArr.indexOf(TEAM);
@@ -954,7 +1029,6 @@
       pending = null;
     };
 
-    /* Hooks */
     btnFire.onclick = () => openConfirm("Fire", COST.Fire);
     btnAlien.onclick = () => openConfirm("Aliens", COST.Alien);
     btnGrass.onclick = () => openConfirm("Grasses", COST.Grass);
@@ -967,6 +1041,7 @@
       'rgb(140, 214, 16)',  // เขียว: ค่าสูง
       'rgb(53, 117, 0)'     // เขียวเข้ม: ค่าสูงมาก
     ];
+    
     function getColor(v) {
       // v = percent 0-100
       if (v < 25) return COLORS[0];
@@ -1055,11 +1130,8 @@
       ds.backgroundColor[0] = getColor(percent);
       scoreGaugeChart.update();
 
-      // ตัวเลขใหญ่กลาง gauge = total
       teamScoreValueEl.textContent = String(total);
-      // ซ้าย = max (เช่น 1800)
       totalScoresEl.textContent = String(max);
-      // ขวา = current score ของตานี้
       currentScoresEl.textContent = String(current);
     }
 
@@ -1112,7 +1184,8 @@
         fetchScores(),
         fetchGrowthStage(),
         fetchStackTrees(),
-        fetchTeamScore()
+        fetchTeamScore(),
+        fetchRound()
       ]);
 
       setLastUpdate("Fetch");
